templates/v1/template.dart.md
```dart
//.title
// ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
//
// GENERATED BY DF GEN - DO NOT MODIFY BY HAND
// See: https://github.com/robmllze/df_gen
//
// ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
//.title~

// ignore_for_file: annotate_overrides
// ignore_for_file: invalid_null_aware_operator
// ignore_for_file: overridden_fields
// ignore_for_file: require_trailing_commas
// ignore_for_file: unnecessary_non_null_assertion
// ignore_for_file: unnecessary_null_comparison
// ignore_for_file: unnecessary_question_mark
// ignore_for_file: unnecessary_this

part of '___CLASS_FILE_NAME___';

// ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░

class ___CLASS_NAME___ extends ___SUPER_CLASS_NAME___ {
  //
  //
  //

  static const CLASS_NAME = '___CLASS_NAME___';

  @override
  String get $className => CLASS_NAME;

  ___FIELD_DECLARATIONS_A___

  //
  //
  //

  const ___CLASS_NAME___({
    ___PARAMS_A1___
  }) ___SUPER_CONSTRUCTOR___;

  const ___CLASS_NAME___.c2({
    ___PARAMS_A2___
  }) ___SUPER_CONSTRUCTOR___;


  factory ___CLASS_NAME___.c3({
    ___PARAMS_A3___
  }) {
    ___FIELD_ASSERTIONS___
    return ___CLASS_NAME___(
      ___ARGS_A___
    );
  }

  factory ___CLASS_NAME___.from(
    BaseModel? other,
  ) {
    try {
      return fromOrNull(other)!;
    } catch (e) {
      assert(false, '___CLASS_NAME___.from: $e');
      rethrow;
    }
  }

  @pragma('vm:prefer-inline')
  static ___CLASS_NAME___? fromOrNull(
    BaseModel? other,
  ) {
    return fromJsonOrNull(other?.toJson())!;
  }

  factory ___CLASS_NAME___.of(
    ___CLASS_NAME___ other,
  ) {
    try {
      return ofOrNull(other)!;
    } catch (e) {
      assert(false, '___CLASS_NAME___.of: $e');
      rethrow;
    }
  }

  @pragma('vm:prefer-inline')
  static ___CLASS_NAME___? ofOrNull(
    ___CLASS_NAME___? other,
  ) {
    return fromJsonOrNull(other?.toJson());
  }

  factory ___CLASS_NAME___.fromJsonString(
    String source,
  ) {
    try {
      return fromJsonStringOrNull(source)!;
    } catch (e) {
     assert(false, '___CLASS_NAME___.fromJsonString: $e');
      rethrow;
    }
  }

  static ___CLASS_NAME___? fromJsonStringOrNull(
    String? source,
  ) {
    try {
      if (source!.isNotEmpty) {
        final decoded = letMapOrNull<String, dynamic>(jsonDecode(source));
        return ___CLASS_NAME___.fromJson(decoded);
      } else {
        return const ___CLASS_NAME___.c2();
      }
    } catch (_) {
      return null;
    }
  }

  factory ___CLASS_NAME___.fromJson(
    Map<String, dynamic>? otherData,
  ) {
    try {
      return fromJsonOrNull(otherData)!;
    } catch (e) {
      assert(false, '___CLASS_NAME___.fromJson: $e');
      rethrow;
    }
  }

  static ___CLASS_NAME___? fromJsonOrNull(
    Map<String, dynamic>? otherData,
  ) {
    try {
      ___FROM_JSON_A1___
      return ___CLASS_NAME___(
        ___FROM_JSON_A2___
      );
    } catch (e) {
      return null;
    }
  }

  factory ___CLASS_NAME___.fromUri(
    Uri? uri,
  ) {
    try {
      return fromUriOrNull(uri)!;
    } catch (e) {
      assert(false, '___CLASS_NAME___.fromUri: $e');
      rethrow;
    }
  }

  static ___CLASS_NAME___? fromUriOrNull(
    Uri? uri,
  ) {
    try {
      if (uri != null && uri.path == CLASS_NAME) {
        return ___CLASS_NAME___.fromJson(uri.queryParameters);
      } else {
        return const ___CLASS_NAME___.c2();
      }
    } catch (_) {
      return null;
    }
  }

  //
  //
  //

  @override
  Map<String, dynamic> toJson({
    bool includeNulls = false,
  }) {
    try {
      ___TO_JSON_A1___
      final withNulls = {
        ___TO_JSON_A2___
      };
      return includeNulls ? withNulls : withNulls.nonNulls;
    } catch (e) {
      assert(false, '___CLASS_NAME___.toJson: $e');
      rethrow;
    }
  }

  //
  //
  //

  @override
  ___CLASS_NAME___ mergeWith(
    BaseModel? other, {
    bool deepMerge = true,
  }) {
    final a = toJson();
    final b = other?.toJson() ?? {};
    final data = (deepMerge ? mergeDataDeep(a, b) : {...a, ...b}) as Map;
    return ___CLASS_NAME___.fromJson(data.cast());
  }

  //
  //
  //

  @override
  ___CLASS_NAME___ copyWith({
    ___COPY_WITH_PARAMS___
  }) {
    return ___CLASS_NAME___.c2(
      ___COPY_WITH_ARGS___
    );
  }

  //
  //
  //

  @override
  ___CLASS_NAME___ copyWithout({
    ___COPY_WITHOUT_PARAMS___
  }) {
    return ___CLASS_NAME___.c2(
      ___COPY_WITHOUT_ARGS___
    );
  }

  //
  //
  //

  ___GETTERS_A___
}

// ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░

abstract final class ___CLASS_NAME___FieldNames {
  ___FIELD_NAMES___
}
```
